# AustraliaArticle

./: .gitignore  analysis.ipynb  bleach.ipynb  hello.py  pyproject.toml  rav.yaml
R/: data.R
R/corelation/: index.R
py/: analysis.ipynb  bleach.ipynb
py/all_data/: all_data.ipynb
py/data_related/: bleach.ipynb
py/origin/: ft.ipynb
py/trim/: index.ipynb
templates/: index.html  walker.html
